[package]
name = "nostd-test"
version = "0.2.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
edition = "2018"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
license = "MIT"
publish = false

[dependencies]
talc = { version = "4.4", default-features = false, features = ["lock_api", "allocator-api2"] }
spin = "0.9"

no-std-compat = { version = "0.4", features = ["alloc"] }
smallvec = { version = "1.13", default-features = false }

log = "0.4"
memflow = { version = "0.2", path = "../memflow", default-features = false, features = ["64_bit_mem"] }
