[package]
name = "flow-coredump"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
flow-core = { path = "../../flow-core" }
log = { version = "0.4.8", default-features = false }
dataview = "0.1"
memmap = { version = "0.7", optional = true }

[features]
default = ["memmap"]

[dev-dependencies]
flow-win32 = { path = "../../flow-win32" }
clap = "2.33.0"
simple_logger = "1.0.1"

[[example]]
name = "read_coredump"
path = "examples/read_coredump.rs"
