[package]
name = "flow-coredump"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
flow-core = { path = "../../flow-core" }
log = { version = "0.4.8", default-features = false }
dataview = "0.1"
flow-mmap = { path = "../flow-mmap/", features = ["filemap"], optional = true }
flow-stdio = { path = "../flow-stdio/", optional = true }

[dev-dependencies]
flow-win32 = { path = "../../flow-win32" }
clap = "2.33.0"
simple_logger = "1.0.1"

[features]
default = ["flow-mmap"]

[[example]]
name = "read_coredump"
path = "examples/read_coredump.rs"
