[package]
name = "flow-kvm"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
memflow-kvm-ioctl = { path = "../../../memflow-kvm-module/rust-bindings/" } #git = "https://github.com/memflow/memflow-kvm-module.git" }
flow-core = { path = "../../flow-core/" }
flow-mmap = { path = "../flow-mmap/", default-features = false }
log = { version = "0.4.8", default-features = false }
