[package]
name = "flow-mmap"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
flow-core = { path = "../../flow-core" }
log = { version = "0.4.8", default-features = false }
memmap = { version = "0.7", optional = true }

[features]
default = ["filemap"]
filemap = ["memmap"]

