[package]
name = "flow-pcileech"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
flow-core = { path = "../../flow-core" }
log = { version = "0.4.8", default-features = false }

[dev-dependencies]
clap = "2.33.0"

[[example]]
name = "read_pcileech"
path = "examples/read_pcileech.rs"
