[package]
name = "flow-qemu-bridge"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[lib]
name = "flow_qemu_bridge"
crate-type = ["cdylib"]

[features]
default = ["locking"]
locking = []

[dependencies]
ctor = "0.1.12"
libc-print = "0.1.11"
libc = "0.2.65"
lazy_static = "1.4.0"
rand = "0.7.2"
flow-core = { path = "../../flow-core" }
flow-derive = { path = "../../flow-derive" }
flow-bridge = { path = "../flow-bridge" }
url = "2.1.0"
