[package]
name = "memflow-coredump"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "win32 coredump connector for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[dependencies]
memflow-core = { path = "../../memflow-core" }
log = { version = "0.4.8", default-features = false }
dataview = "0.1"
memflow-mmap = { path = "../memflow-mmap/", features = ["filemap"], optional = true }

[dev-dependencies]
memflow-win32 = { path = "../../memflow-win32" }
clap = "2.33.0"
simple_logger = "1.0.1"

[features]
default = ["memflow-mmap"]

[[example]]
name = "read_coredump"
path = "examples/read_coredump.rs"
