[package]
name = "memflow-coredump"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "win32 coredump connector for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow-core = { path = "../../memflow-core", features = ["filemap", "plugins"] }
memflow-derive = { path = "../../memflow-derive" }
log = { version = "0.4.8", default-features = false }
dataview = "0.1"

[dev-dependencies]
memflow-win32 = { path = "../../memflow-win32" }
clap = "2.33.0"
simple_logger = "1.0.1"

[features]
default = ["filemap"]
filemap = []

[[example]]
name = "read_coredump"
path = "examples/read_coredump.rs"
