[package]
name = "memflow-kvm"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "kvm connector for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow-kvm-ioctl = { git = "ssh://git@github.com/memflow/memflow-kvm-module.git" }
memflow-core = { path = "../../memflow-core" }
memflow-derive = { path = "../../memflow-derive" }
log = { version = "0.4.8", default-features = false }

[features]
default = []
plugin = []
