[package]
name = "memflow-stdio"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "standard i/o connector for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[dependencies]
memflow-core = { path = "../../memflow-core/" }
